fixed an overflow issue

--- a/resi.store/css/landing-page.css
+++ b/resi.store/css/landing-page.css
@@ -66,3 +66,17 @@ p.copyright{margin:15px 0 0;}
 img{width:auto;max-width:100%;height:auto;}
 .map{padding:5px;border-radius:5px;}
 .store-gif{position:relative;top:50px;padding:5px;border-radius:10px;}
+.img-responsive {
+    display: block;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+}
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
